--- a/apps/storefront/assets/global.css
+++ b/apps/storefront/assets/global.css
@@ -11,8 +11,16 @@
     @apply bg-primary-100 text-white px-8 py-4 font-bold cursor-pointer table;
   }
 
+  .btn-primary:focus {
+    @apply outline outline-primary-100 outline-offset-2
+  }
+
   .btn-light {
     @apply text-primary-100 px-8 py-4 font-bold cursor-pointer table;
+  }
+
+  .btn-light:focus {
+    @apply underline
   }
 
   .triangle-top {
