--- a/apps/storefront/assets/global.css
+++ b/apps/storefront/assets/global.css
@@ -21,7 +21,7 @@
   }
 
   .btn-secondary {
-    @apply btn-light border-2 border-primary-100 rounded-full
+    @apply btn-light border-2 border-primary-100 rounded-full bg-white text-primary-100;
   }
 
   .btn-primary:focus {
