--- a/apps/storefront/assets/global.css
+++ b/apps/storefront/assets/global.css
@@ -8,12 +8,12 @@
 }
 
 *:focus {
-  @apply outline outline-1 outline-black
+  @apply outline outline-1 outline-black;
 }
 
 @layer components {
   .btn {
-    @apply px-8 py-4 cursor-pointer table border rounded-sm !outline-none;
+    @apply px-8 py-4 cursor-pointer table rounded-sm !outline-none;
   }
 
   .btn-primary {
@@ -21,11 +21,11 @@
   }
 
   .btn-secondary {
-    @apply btn-light border-2 border-primary-100
+    @apply btn-light border-2 border-primary-100;
   }
 
   .btn-primary:focus {
-    @apply underline
+    @apply underline;
   }
 
   .btn-light {
@@ -33,7 +33,7 @@
   }
 
   .btn-light:focus {
-    @apply underline
+    @apply underline;
   }
 
   .triangle-top {
@@ -65,7 +65,7 @@
   }
 
   .number-controls-hidden::-webkit-outer-spin-button,
-    .number-controls-hidden::-webkit-inner-spin-button {
+  .number-controls-hidden::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
   }
